--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-requests~=2.31.0
+requests~=2.32.0
 python-dotenv~=1.0.1
 pymongo~=4.10.1
 dotenv
-shapely
+shapely~=2.0.6
+networkx~=3.4.2
+osmnx~=2.0.0
 networkx
 osmnx
+geojson~=3.1.0
+shapely
