--- a/.env
+++ b/.env
@@ -1,4 +1,21 @@
+# --- MACHINE ---
+
+MACHINE='Juan'
+
+# --- KEYS ---
 TOMTOM_API_KEY="TVPkXX98X3sLtx1ncMvioGv6N4YUT6GW"
+
+# --- MONGO ---
+
 MONGO_URI="mongodb://localhost:27017"
 MONGO_DB="STEP"
-MONGO_COLLECTION_INCIDENTS="incidents_scrapper"
+MONGO_USERNAME="step"
+MONGO_PASSWORD="step"
+MONGO_AUTH_SOURCE="STEP"
+MONGO_PORT=27017
+
+#   --- MONGO COLLECTIONS ---
+
+MONGO_COLLECTION_INCIDENTS="incidents"
+MONGO_COLLECTION_GRAPHS_TEATINOS="graphs"
+MONGO_COLLECTION_GRAPHS_SOHO="graphs_soho"
